--- a/components/ToolBar/ToolBar.module.scss
+++ b/components/ToolBar/ToolBar.module.scss
@@ -9,16 +9,30 @@
     z-index: 2;
     background-color: white;
     padding: 0px 10px;
+
+    &>div>* {
+        margin-right: 8px;
+    }
 }
 
-.button{
+.leftTolls {
+    display: flex;
+    align-items: center;
+}
+
+.button {
     background-color: transparent;
     border: none;
     height: 100%;
-    margin-right: 8px;
+    padding: 3px;
     cursor: pointer;
+    border: 1px solid transparent;
 }
 
-.inputColor{
+.activeButton {
+    border-color: black;
+}
+
+.inputColor {
     cursor: pointer;
 }
