--- a/styles/global.scss
+++ b/styles/global.scss
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+label {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 .App {
     width: 100vw;
     height: 100vh;
